# city-data-aggregator

./: Cargo.toml  README.md
auth-service/: Cargo.toml
auth-service/src/: config.rs  handlers.rs  jwt.rs  main.rs  middleware.rs  openapi.rs
auth-service/src/db/: migrations.rs  mod.rs  queries.rs
common/: Cargo.toml
common/src/: errors.rs  http_client.rs  lib.rs  models.rs  tracing.rs
docs/: API.md  flowchart.md
time-service/: Cargo.toml
time-service/src/: api_client.rs  cache.rs  config.rs  handlers.rs  main.rs  openapi.rs
weather-service/: Cargo.toml
weather-service/src/: aggregator.rs  api_client.rs  cache.rs  config.rs  handlers.rs  main.rs  openapi.rs
weather-service/tests/: integration_test.rs
