[workspace]
resolver = "2"
members = [
    "common",
    "auth-service",
    "weather-service",
    "time-service"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.13.1", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "macros"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
bcrypt = "0.18"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
wiremock = "0.6"
urlencoding = "2.1"

