[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

