[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
chrono.workspace = true
utoipa.workspace = true
axum.workspace = true

