[package]
name = "time-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
chrono.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
urlencoding.workspace = true

